# RIFT.ware

./: .cproject  .gitmodules  .gitmodules.deps  .gitmodules.deps.orig  .gitmodules.orig  .project  .pydevproject  .repo  CMakeLists.txt  CMakeLists.txte  Makefile  Makefile.env  Makefile.top  README.md  RELEASE  RIFTWARE_COMPILATION_LICENSE  rift-bashrc  rift-prompt  rift-shell  rift_env.py
modules/automation/core/: .gitignore  CMakeLists.txt  package-description.txt
modules/automation/core/harness/: driver  harness  job_control  lab_vm  prepare_openstack.py  prepare_resource.py  scrub_tenant.py
modules/automation/core/lib/: CMakeLists.txt  dict2xml.py  ndl.py  racfg_schema.json  raconfg.json  rw_checks.py  rw_common.py  rw_plotting.py  rw_testcase.py  rw_testconfig.py  rw_vm.py
modules/automation/core/util/: sarplot.py  show_sysinfo.py  systest_wrapper.sh  test_module_wrapper.py  test_openstack_wrapper.py  upload_image_cal.py  wait_until_system_started.py
modules/core/mano/common/: CMakeLists.txt  rw_gen_package.py
modules/core/mano/confd_client/: CMakeLists.txt  README  confd_client.c  test.sh
modules/core/mano/rwmc/: CMakeLists.txt
modules/core/mgmt/: .gitignore  CMakeLists.txt  package-description.txt
modules/core/mgmt/rwcli/: CMakeLists.txt
modules/core/mgmt/rwdebug-scripts/: CMakeLists.txt  rwsysdump
modules/core/mgmt/rwrestconf/: CMakeLists.txt
modules/core/mgmt/rwuagent/: CMakeLists.txt
modules/core/rwvx/rwcal/: CMakeLists.txt
modules/core/rwvx/rwdts/: CMakeLists.txt
modules/core/rwvx/rwdtsmockserver/: CMakeLists.txt
modules/core/rwvx/rwdynschema/: CMakeLists.txt
modules/core/rwvx/rwmsg/: CMakeLists.txt  rwmsg_experiment.c  rwmsg_toysched.c  rwmsg_toysched.h
modules/core/rwvx/rwschema/: CMakeLists.txt  rwbase_schema_listing.txt
modules/core/rwvx/rwshell/: CMakeLists.txt  Makefile
modules/core/util/confd/: CMakeLists.txt  README
modules/core/util/rwut/: CMakeLists.txt
modules/ext/ipc/redis/: CMakeLists.txt  Upstream.txt  redis_cluster.py
modules/ext/mgmt/confd_basic/: CMakeLists.txt
modules/ext/util/uthash/: CMakeLists.txt
modules/toolchain/: .gitignore  CMakeLists.txt  package-description.txt
modules/toolchain/cmake/modules/: CMakeUserUseBison.cmake  CMakeUserUseFlex.cmake  FindGcrypt.cmake  FindGnuTLS.cmake  FindIDNA.cmake  FindMySQL.cmake  FindPostgreSQL.cmake  FindRIFT_GI.cmake  FindRIFT_GLIB2.cmake  FindRIFT_LIBNL.cmake  FindRIFT_LIBPEAS.cmake  FindRIFT_LIBUNWIND.cmake  FindSCTP.cmake  GetVersionWithHg.cmake  rift_adj_prefix.cmake  rift_build_cache.cmake.in  rift_build_utils.cmake  rift_build_utils.cmakee  rift_code_coverage.cmake  rift_documentation.cmake  rift_externalproject.cmake  rift_fetch_dependencies.cmake.in  rift_fetch_dependencies.cmake.ine  rift_globals.cmake  rift_install.cmake  rift_logging.cmake  rift_pkg_config.cmake  rift_plugin.cmake  rift_proto.cmake  rift_pyang.cmake.in  rift_python.cmake  rift_submodule.cmake  rift_systemtest.cmake  rift_topdir.cmake  rift_unittest.cmake  rift_utils.cmake  rift_yang.cmake
modules/toolchain/home/: cmake  get_platform.sh  rift-bashrc  rift-prompt  rift-shell  rift_env.py
modules/toolchain/home/etc/: pylintrc
modules/toolchain/rwbase/: CMakeLists.txt
modules/toolchain/rwbase/include/: CMakeLists.txt
modules/toolchain/rwbase/python/: CMakeLists.txt  sitecustomize.py
modules/toolchain/scripts/: get-file
modules/tools/scripts/: CMakeLists.txt  README  package-description.txt
modules/tools/scripts/installers/: install-launchpad  install-riftware  install-workspace
rwbase/: CMakeLists.txt
rwbase/include/: CMakeLists.txt  queue.h
rwbase/python/: CMakeLists.txt  sitecustomize.py
rwbase/python/rift/: gi_utils.py
rwbase/python/rift/gi/: pbcm_override.py
scripts/: CMakeLists.txt  rift-scripts.sh.in
scripts/cloud/: CMakeLists.txt  GetVM  UPDATE  UpdateHostsFile  check_demosetup  check_kvm  cloudtool  copy_to_fedora_image  create_demo60_1  create_demo60_2  create_demo60_3  create_demosetup  create_smalldemo  deploy_latest_vm  devstack  devstack_kilo  dns.py  enable_lab  fix_nova_fabric  get_all_vms.py  get_compute_node  get_port_info  get_switch_known_macs.py  get_vm_config  grunt_portmap.sh  hosts_to_ips.py  install_kernel_mods  install_loganalyzer  install_packstack  install_packstack_kilo  install_vms  is_vm_current  openstack_githash  prepare_host  pycscope-indexer  qcow_to_ova  recreate_vms  remove_compute_node  reset_vm  restart  (+7 more)
scripts/env/: domyvmsrift  envset.sh  getmyvms  new_vm  ppid_monitor.sh  pyang_parallel.sh  rift.sh  rift_remote_shell  riftenv.sh  ssh_rift  ssh_root  test_wrapper.sh  test_wrapper2.sh
scripts/jenkins/: launch_build  run-steps  run_steps_and_archive.sh
scripts/packaging/: build-riftware-release-rpms  build-rpm  copyright-helper.py  create-branch-repo  getbuild  rift.repo  setrepo  update-riftware-repo.sh
scripts/packaging/licenses/: riftio-copyright-notice-20151211.txt  riftio-copyright-notice-20151218.txt
scripts/packaging/rpmbuild/FILELISTS/: riftware-admin-tools.txt  riftware-base-ui.txt  riftware-base.txt  riftware-demo-trafgen.txt  riftware-launchpad.txt  riftware-loganalyzer.txt  riftware-missioncontrol.txt  riftware-missioncontrol.workedPre20151120.txt  riftware-release.txt  riftware-scripts-host.txt  riftware-scripts-internal-lab.txt  riftware-scripts-vm.txt
scripts/packaging/rpmbuild/SPECS/: riftware-admin-tools.spec  riftware-base-ui.spec  riftware-base.spec  riftware-demo-trafgen.spec  riftware-launchpad.spec  riftware-loganalyzer.spec  riftware-missioncontrol.spec  riftware-release.spec  riftware-scripts-vm.spec  (+4 more)
scripts/rpm/: rift-scripts.spec
scripts/test/: sh2ju.sh
scripts/util/: cmdargs.pl  generate_composite_yang.py  generate_foss.py  generate_gdbinit.sh  tasklet_skeleton.sh  timestamp_restore.sh  vapi_to_c.py  yang_package.py
scripts/vm_image/: base.config.sh  base.rpms  build.config.sh  build.pip3  build.rpms  launchpad.depends  launchpad.rpms  missioncontrol.rpms  mkvmimg  riftware-release.repo  ui-lab.config.sh  ui.config.sh  ui.kilo  ui.pip3  ui.rpms  vnf.config.sh  vnf.pip3  vnf.rpms
(+5295 files in other folders)
